2007-01-09 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml-gl/openvrml/gl/viewer.cpp: Updated
	floating-point "near equal" comparison for parity with
	libopenvrml.

2007-01-09 Braden McDaniel  <braden@endoframe.com>

	Assert that rotation components are not NaN.

	* src/libopenvrml/openvrml/basetypes.cpp
	(openvrml::rotation::rotation(const float (&)[4])): Assert that
	rotation components are not NaN.
	(openvrml::rotation::rotation(float, float, float, float)): Assert
	that rotation components are not NaN.
	(openvrml::rotation::rotation(const vec3f &, float)): Assert
	that rotation components are not NaN.

2007-01-03 Braden McDaniel  <braden@endoframe.com>

	* src/openvrml-gtkplug/main.cpp
	(main(int, char *[])): Call gdk_threads_init.

2007-01-03 Braden McDaniel  <braden@endoframe.com>

	* src/openvrml-gtkplug/gtkvrmlbrowser.cpp
	(resource_fetcher::do_get_resource(const std::string &)): Dismiss
	the error_guard.

2007-01-03 Braden McDaniel  <braden@endoframe.com>

	* src/openvrml-gtkplug/gtkvrmlbrowser.cpp: Use scope_guard from
	boost::multi_index.

2007-01-03 Braden McDaniel  <braden@endoframe.com>

	* src/openvrml-gtkplug/gtkvrmlbrowser.cpp
	(GtkGLViewer::GtkGLViewer(GIOChannel &, GtkVrmlBrowser &)): Since
	stdout is used to communicate with the host process, send all
	browser output to stderr.

2007-01-03 Braden McDaniel  <braden@endoframe.com>

	* src/openvrml-gtkplug/gtkvrmlbrowser.cpp
	(resource_fetcher::do_get_resource(const std::string &)): Check
	the return status given by g_io_channel_write_chars and
	g_io_channel_flush; set badbit and bail if there's a problem.

2007-01-03 Braden McDaniel  <braden@endoframe.com>

	Factored command and request channel shutdown into separate
	functions.

	* src/openvrml-gtkplug/main.cpp
	(command_channel_shutdown(GIOChannel *)): Added function to shut
	down the command channel.
	(request_channel_shutdown(GIOChannel *)): Added function to shut
	down the request channel.